# profile-generator

./: CONTRIBUTING.md  Cargo.toml
src/: artifact.rs  download.rs  generator.rs  main.rs  minecraft.rs  util.rs  validator.rs
src/minecraft/: fabric.rs  forge.rs  version.rs
