[package]
name = "profile-generator"
version = "0.1.0"
authors = ["RussianJeb <russianjeb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde_json = "1.0"
walkdir = "2.3"
semver = "0.11"
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
zip = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.10"
features = ["json", "blocking"]

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros"]

[dependencies.launcher_api]
git = "https://github.com/team-ns/launcher"

